# DocuGenie

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
api/: pyproject.toml
api/app/: hf_removal_threshold.py  main.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: documents.py
backend/app/core/: config.py
documentazione/: Doumentazione DocuGenie.md
examples/: output.json
examples/split-json-files/: chunk_1.json  chunk_10.json  chunk_102.json  chunk_104.json  chunk_108.json  chunk_109.json  chunk_110.json  chunk_112.json  chunk_114.json  chunk_115.json  chunk_116.json  chunk_117.json  chunk_118.json  chunk_12.json  chunk_121.json  chunk_122.json  chunk_124.json  chunk_125.json  chunk_130.json  chunk_133.json  chunk_136.json  chunk_139.json  chunk_140.json  chunk_142.json  chunk_144.json  chunk_145.json  chunk_147.json  chunk_148.json  chunk_149.json  chunk_15.json  chunk_151.json  chunk_152.json  chunk_155.json  chunk_158.json  chunk_160.json  chunk_162.json  chunk_164.json  chunk_165.json  chunk_167.json  chunk_168.json  (+345 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
src/: App.css  App.jsx  App.tsx  index.css  main.tsx  worker.js
src/assets/: output.json  rule.json
src/components/: Header.tsx  InputDialogue.tsx  RuleForm.tsx  RulesTree.tsx  context.ts
src/context/: context.ts
ui/: README.md  tailwind.config.js  tsconfig.json
(+785 files in other folders)
